--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>March class</h1>
-    <h2>Evaluation session</h2>
-    <h2>Exam session</h2>
+    <h2>Evangadi Class</h2>
+    
 </body>
 </html>
